--- a/Frontend/GramoFER/index.html
+++ b/Frontend/GramoFER/index.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <style>
       body{
-        background-color: azure;
+        background-color: white;
         margin: 0;
       }
       #root{
-        background-color: azure;
+        background-color: white;
       }
     </style>
   </head>
